# crisp-zk

./: .gitignore  Cargo.toml  README.md
crates/generator/: Cargo.toml
crates/generator/src/: ciphertext_addition_vectors.rs  lib.rs  serialization.rs
crates/js-lib/: Cargo.toml  wasm-pack.toml
crates/js-lib/src/: lib.rs
example/: index.js  package.json
js-scripts/: crisp-circuit.json  package.json  pnpm-lock.yaml  test.js
scripts/: crisp.json  package.json  test.js
