[workspace]
members = [
    "crates/generator",
    "crates/js-lib"
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Cedoor <me@cedoor.dev>"]
license = "MIT"
repository = "https://github.com/cedoor/crisp-zk"
description = "A library for pre-computing inputs to generate CRISP proofs."
