[package]
name = "crisp-zk-inputs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core logic to pre-compute CRISP ZK inputs."

[dependencies]
fhe = { git = "https://github.com/gnosisguild/fhe.rs", branch = "refactor/pvw-compat" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", branch = "refactor/pvw-compat" }
greco = { package = "zkfhe-greco", git = "https://github.com/gnosisguild/zkfhe-generator", branch = "main" }
serde = "1.0.133"
serde_json = "1.0.133"
num-bigint = "0.4.6"
rand = "0.8.5"
hex = "0.4.3"



